--- a/AMBE/add_form.css
+++ b/AMBE/add_form.css
@@ -33,6 +33,16 @@ body {
 #submit-button {
     margin-left: 140px;
     margin-top: 20px;
+    border-radius: 10px;
+    border-style: none;
+    padding: 8px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+#submit-button:hover {
+    transform: scale(1.1)
+
 }
 
 .redirect-button {
