--- a/AMBE/add_form.css
+++ b/AMBE/add_form.css
@@ -25,12 +25,14 @@ body {
 #name-input {
     font-size: 20px;
     border-radius: 8px;
+    padding: 5px;
 }
 
 #email-input {
     border-radius: 8px;
     font-size: 20px;
     margin-top: 10px;
+    padding: 5px;
 }
 
 #submit-button {
